Connection string now points to azure database

--- a/TheRideYouRent/appsettings.json
+++ b/TheRideYouRent/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-TheRideYouRent-5FD814CE-40A5-42E5-8222-C49F6B1BA8D6;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Data Source=10117299.database.windows.net;Initial Catalog=DB;Persist Security Info=True;User ID=adm10117299;Password=Landseen76"
   },
   "Logging": {
     "LogLevel": {
