--- a/TheRideYouRent/appsettings.json
+++ b/TheRideYouRent/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=10117299.database.windows.net;Initial Catalog=DB;Persist Security Info=True;User ID=adm10117299;Password=Landseen76"
+    "DefaultConnection": "Server=tcp:simple-ser.database.windows.net,1433;Initial Catalog=TheRideYouRent;Persist Security Info=False;User ID=adm10117299;Password=Landseen76;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
   "Logging": {
     "LogLevel": {
