--- a/TheRideYouRent/appsettings.json
+++ b/TheRideYouRent/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=tcp:simple-ser.database.windows.net,1433;Initial Catalog=TheRideYouRent;Persist Security Info=False;User ID=adm10117299;Password=Landseen76;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+    "DefaultConnection": "Data Source=simple-ser.database.windows.net;Initial Catalog=TheRideYouRent;User ID=adm10117299;Password=Landseen76;Connect Timeout=30;Encrypt=True;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
   },
   "Logging": {
     "LogLevel": {
