Updated connection string

--- a/TheRideYouRent/appsettings.json
+++ b/TheRideYouRent/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=simple-ser.database.windows.net;Initial Catalog=TheRideYouRent;User ID=adm10117299;Password=Landseen76;Connect Timeout=30;Encrypt=True;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+    "DefaultConnection": "Data Source=ML-RefVm-631348\\SQLEXPRESS;Initial Catalog=TheRideYouRent;Integrated Security=True"
   },
   "Logging": {
     "LogLevel": {
