Updated connection string

--- a/TheRideYouRent/appsettings.json
+++ b/TheRideYouRent/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=ML-RefVm-631348\\SQLEXPRESS;Initial Catalog=TheRideYouRent;Integrated Security=True"
+    "DefaultConnection": "Data Source=JORDAN;Initial Catalog=TheRideYouRent;Integrated Security=True"
   },
   "Logging": {
     "LogLevel": {
